--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
@@ -145,7 +145,7 @@
             <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-war-plugin</artifactId>
 	            <configuration>
-	                <outputDirectory>../../../dist/${deployment.type}/${artifactId}/</outputDirectory>
+	                <outputDirectory>../../dist/${deployment.type}/${artifactId}/</outputDirectory>
 	            </configuration>
 	        </plugin>
 			
