SQL Services support as a sample https://bugs.eclipse.org/bugs/show_bug.cgi?id=477189

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/plugin.xml
@@ -71,6 +71,12 @@
             location="/org/eclipse/dirigible/ide/template/ui/js/templates/java-service.java_"
             text="Java Hello World Service">
       </template>
+      <template
+            category="ScriptingServices"
+            image="/icons/sql-service.png"
+            location="/org/eclipse/dirigible/ide/template/ui/js/templates/sql-service.sql"
+            text="SQL Sample Query Service">
+      </template>
       <!-- Ruby Template
       <template
             category="ScriptingServices"
