--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
@@ -66,6 +66,7 @@
 		<module>org.eclipse.dirigible.runtime.web</module>
 		<module>org.eclipse.dirigible.runtime.wiki</module>
 		<module>org.eclipse.dirigible.runtime.java</module>
+        <module>org.eclipse.dirigible.runtime.sql</module>
 		<!--
 		<module>org.eclipse.dirigible.runtime.java.test</module>
 		
