Make Local Repository - Default https://bugs.eclipse.org/bugs/show_bug.cgi?id=482462

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -94,6 +94,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.db.init@start,\
   org.eclipse.dirigible.repository.db@start,\
   org.eclipse.dirigible.repository.ext@start,\
+  org.eclipse.dirigible.repository.local@start,\
   org.eclipse.dirigible.ide.repository.ui@start,\
   org.eclipse.dirigible.ide.scripts.publish@start,\
   org.eclipse.dirigible.ide.security.publish@start,\
