--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -77,6 +77,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.db.init@start,\
   org.eclipse.dirigible.repository.db@start,\
   org.eclipse.dirigible.repository.ext@start,\
+  org.eclipse.dirigible.repository.local@start,\
   org.eclipse.dirigible.runtime.core@start,\
   org.eclipse.dirigible.runtime.wiki@start,\
   org.eclipse.dirigible.runtime.java@start,\
