Extract JavaScript related functionality (Rhino based) to a separated plugin https://bugs.eclipse.org/bugs/show_bug.cgi?id=482494

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -79,6 +79,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.ext@start,\
   org.eclipse.dirigible.repository.local@start,\
   org.eclipse.dirigible.runtime.core@start,\
+  org.eclipse.dirigible.runtime.javascript@start,\
   org.eclipse.dirigible.runtime.wiki@start,\
   org.eclipse.dirigible.runtime.java@start,\
   org.eclipse.dirigible.runtime.sql@start,\
