--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -121,6 +121,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.org.eclipse.rap.rwt.supplemental.filedialog@start,\
   org.eclipse.dirigible.org.eclipse.ui.ide@start,\
   org.eclipse.dirigible.runtime.core@start,\
+  org.eclipse.dirigible.runtime.javascript@start,\
   org.eclipse.dirigible.runtime.wiki@start,\
   org.eclipse.dirigible.runtime.java@start,\
   org.eclipse.dirigible.runtime.sql@start,\
