--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/tomcat-postgres/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/tomcat-postgres/web.xml
@@ -214,6 +214,7 @@
 			<url-pattern>/services/web/wiki-secured/*</url-pattern>
 			<url-pattern>/services/ui/index.html</url-pattern>
 			<url-pattern>/services/js-sandbox/*</url-pattern>
+			<url-pattern>/services/test-secured/*</url-pattern>
 			<url-pattern>/services/groovy-sandbox/*</url-pattern>
 			<url-pattern>/services/web-sandbox/*</url-pattern>
 			<url-pattern>/services/wiki-sandbox/*</url-pattern>
