Extract Command Services related functionality https://bugs.eclipse.org/bugs/show_bug.cgi?id=482495

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -122,6 +122,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.org.eclipse.ui.ide@start,\
   org.eclipse.dirigible.runtime.core@start,\
   org.eclipse.dirigible.runtime.javascript@start,\
+  org.eclipse.dirigible.runtime.command@start,\
   org.eclipse.dirigible.runtime.wiki@start,\
   org.eclipse.dirigible.runtime.java@start,\
   org.eclipse.dirigible.runtime.sql@start,\
