--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
@@ -64,6 +64,10 @@
 		<module>org.eclipse.dirigible.runtime.core.test</module>
         <module>org.eclipse.dirigible.runtime.javascript</module>
         <module>org.eclipse.dirigible.runtime.javascript.test</module>
+        <module>org.eclipse.dirigible.runtime.command</module>
+        <!--
+        <module>org.eclipse.dirigible.runtime.command.test</module>
+         -->
 		<module>org.eclipse.dirigible.runtime.security</module>
 		<module>org.eclipse.dirigible.runtime.web</module>
 		<module>org.eclipse.dirigible.runtime.wiki</module>
