--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/pom.xml
@@ -98,6 +98,7 @@
 		<module>org.eclipse.dirigible.repository.logging</module>
 		<module>org.eclipse.dirigible.repository.local</module>
         <module>org.eclipse.dirigible.repository.local.test</module>
+        <module>org.eclipse.dirigible.repository.git</module>
 	</modules>
  
 </project>
