refactoring - moving Velocity Generator to Repository component https://bugs.eclipse.org/bugs/show_bug.cgi?id=482502

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -95,6 +95,8 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.db@start,\
   org.eclipse.dirigible.repository.ext@start,\
   org.eclipse.dirigible.repository.local@start,\
+  org.eclipse.dirigible.repository.velocity@start,\
+  org.eclipse.dirigible.repository.git@start,\
   org.eclipse.dirigible.ide.repository.ui@start,\
   org.eclipse.dirigible.ide.scripts.publish@start,\
   org.eclipse.dirigible.ide.security.publish@start,\
@@ -107,7 +109,6 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.ide.template.ui.tc@start,\
   org.eclipse.dirigible.ide.template.ui.sc@start,\
   org.eclipse.dirigible.ide.template.ui.ed@start,\
-  org.eclipse.dirigible.ide.template.velocity@start,\
   org.eclipse.dirigible.ide.ui.common@start,\
   org.eclipse.dirigible.ide.ui.publish@start,\
   org.eclipse.dirigible.ide.ui.rap@start,\
