--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -78,6 +78,8 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.db@start,\
   org.eclipse.dirigible.repository.ext@start,\
   org.eclipse.dirigible.repository.local@start,\
+  org.eclipse.dirigible.repository.velocity@start,\
+  org.eclipse.dirigible.repository.git@start,\
   org.eclipse.dirigible.runtime.core@start,\
   org.eclipse.dirigible.runtime.javascript@start,\
   org.eclipse.dirigible.runtime.wiki@start,\
