--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/org.eclipse.dirigible.repository.velocity/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/org.eclipse.dirigible.repository.velocity/pom.xml
@@ -5,13 +5,13 @@
 	<packaging>eclipse-plugin</packaging>
 
 	<parent>
-		<groupId>org.eclipse.dirigible.ide</groupId>
-		<artifactId>org.eclipse.dirigible.ide.parent</artifactId>
+		<groupId>org.eclipse.dirigible.repository</groupId>
+		<artifactId>org.eclipse.dirigible.repository.parent</artifactId>
 		<version>2.2.151117</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<artifactId>org.eclipse.dirigible.ide.template.velocity</artifactId>
+	<artifactId>org.eclipse.dirigible.repository.velocity</artifactId>
 	
 	
 	<dependencies>
