DataSource Facade plugin moved to Repository

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -77,7 +77,6 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.ide.db.sqlconsole.rap@start,\
   org.eclipse.dirigible.ide.workspace.rap@start,\
   org.eclipse.dirigible.ide.common@start,\
-  org.eclipse.dirigible.ide.datasource@start,\
   org.eclipse.dirigible.ide.db.publish@start,\
   org.eclipse.dirigible.ide.db.export@start,\
   org.eclipse.dirigible.ide.db.viewer@start,\
@@ -97,6 +96,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.local@start,\
   org.eclipse.dirigible.repository.velocity@start,\
   org.eclipse.dirigible.repository.git@start,\
+  org.eclipse.dirigible.repository.datasource@start,\
   org.eclipse.dirigible.ide.repository.ui@start,\
   org.eclipse.dirigible.ide.scripts.publish@start,\
   org.eclipse.dirigible.ide.security.publish@start,\
