--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/pom.xml
@@ -100,6 +100,7 @@
         <module>org.eclipse.dirigible.repository.local.test</module>
         <module>org.eclipse.dirigible.repository.git</module>
 		<module>org.eclipse.dirigible.repository.velocity</module>
+        <module>org.eclipse.dirigible.repository.datasource</module>
 	</modules>
  
 </project>
