Database content initialization moved outside of Repository(s) https://bugs.eclipse.org/bugs/show_bug.cgi?id=483489

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
@@ -11,6 +11,16 @@
               load-on-startup="true">
         </servlet>
      </extension>
+     
+     <extension
+           id="DBInitializerServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/db-init"
+              class="org.eclipse.dirigible.runtime.content.DBInitializerServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
 	 
 	 <extension
            id="ContentExporterServlet"
