--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -15,6 +15,7 @@ osgi.bundles=com.google.gson@start,\
   org.apache.commons.io@start,\
   org.apache.commons.lang@start,\
   org.apache.commons.logging@start,\
+  org.apache.commons.dbcp@start,\
   org.apache.ant@start,\
   org.apache.derby@start,\
   org.apache.felix.gogo.command@start,\
@@ -67,6 +68,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.rap.ui.forms@start,\
   org.eclipse.rap.ui.views@start,\
   org.eclipse.rap.ui.workbench@start,\
+  org.eclipse.orbit.mongodb@start,\
   org.jdom@start,\
   org.apache.log4j@start,\
   org.slf4j.api@start,\
