--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -170,7 +170,14 @@
   		<res-ref-name>mail/SAPInternalNWCloudSession</res-ref-name>
   	    <res-type>javax.mail.Session</res-type>
   	</resource-ref>
-	
+  	
+  	<!-- Custom Data Source
+  	<resource-ref>
+		<res-ref-name>jdbc/XXX</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+	 -->
 
 	<!-- Security -->
 	
