--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat-postgres/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat-postgres/web.xml
@@ -97,6 +97,13 @@
 			<param-name>repositoryProvider</param-name>
 			<param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value>
 		</init-param>
+		
+		<!-- JNDI key for the Custom Database DataSource(s) 
+		<init-param>
+			<param-name>jndiCustomDataSource-PostgresDB</param-name>
+			<param-value>java:comp/env/jdbc/PostgresDB</param-value>
+		</init-param>
+		-->
 
 		<load-on-startup>2</load-on-startup>
 
@@ -152,20 +159,10 @@
 	<!-- Resource References 
 	
 	<resource-ref>
-		<res-ref-name>jdbc/DefaultDB</res-ref-name>
+		<res-ref-name>jdbc/PostgresDB</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
-	
-	<resource-ref>
-    	<res-ref-name>connectivity/Configuration</res-ref-name>
-    	<res-type>com.sap.core.connectivity.api.configuration.ConnectivityConfiguration</res-type>
-	</resource-ref>
-	
-	<resource-ref>
-  		<res-ref-name>mail/SAPInternalNWCloudSession</res-ref-name>
-  	    <res-type>javax.mail.Session</res-type>
-  	</resource-ref>
 	
 	-->
 	
