--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -16,6 +16,7 @@ osgi.bundles=com.google.gson@start,\
   org.apache.commons.lang@start,\
   org.apache.commons.logging@start,\
   org.apache.commons.dbcp@start,\
+  org.apache.commons.pool@start,\
   org.apache.ant@start,\
   org.apache.derby@start,\
   org.apache.felix.gogo.command@start,\
