Add Auto Publish Fix append of serveral path segments with one call Fix that removes Project name from public path.

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.publish.ui/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.publish.ui/plugin.xml
@@ -152,6 +152,18 @@
                tooltip="Turn on/off Auto Activation">
          </action>
          
+         <action
+               allowLabelUpdate="true"
+               class="org.eclipse.dirigible.ide.publish.ui.command.AutoPublishAction"
+               id="org.eclipse.dirigible.ide.publish.ui.command.AutoPublishAction"
+               label="Auto Publish"
+               menubarPath="org.eclipse.dirigible.projectMenu/autoActivationGroup"
+               state="true"
+               style="toggle"
+               toolbarPath="autoActivationGroup"
+               tooltip="Turn on/off Auto Publish">
+         </action>
+         
       </actionSet>
    </extension>
     <extension
