MelService on HCP fix https://bugs.eclipse.org/bugs/show_bug.cgi?id=483938

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat-postgres/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat-postgres/web.xml
@@ -104,6 +104,11 @@
 			<param-value>java:comp/env/jdbc/PostgresDB</param-value>
 		</init-param>
 		
+		<!-- Mail Service Built-in --> 
+		<init-param>
+			<param-name>mailSender</param-name>
+			<param-value>built-in</param-value>
+		</init-param>
 
 		<load-on-startup>2</load-on-startup>
 
