--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -102,6 +102,12 @@
 		</init-param>
 		-->
 		
+		<!-- Mail Service Provided --> 
+		<init-param>
+			<param-name>mailSender</param-name>
+			<param-value>provided</param-value>
+		</init-param>
+		
 		<load-on-startup>2</load-on-startup>
 
 	</servlet>
