--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/trial-postgres/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/trial-postgres/web.xml
@@ -96,7 +96,13 @@
 		<init-param>
 			<param-name>repositoryProvider</param-name>
 			<param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value>
-		</init-param>		
+		</init-param>
+		
+		<!-- Mail Service Built-in --> 
+		<init-param>
+			<param-name>mailSender</param-name>
+			<param-value>built-in</param-value>
+		</init-param>
 
 		<load-on-startup>2</load-on-startup>
 
