--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -92,8 +92,46 @@
 		<!-- Default Repository Provider --> 
 		<init-param>
 			<param-name>repositoryProvider</param-name>
-			<param-value>org.eclipse.dirigible.repository.db.DBRepositoryProvider</param-value>
+			 <param-value>org.eclipse.dirigible.repository.db.DBRepositoryProvider</param-value> 
+			 <!-- <param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value> -->
 		</init-param>
+		
+		<!-- Default Repository Provider Master (used for Initial Load or Reset)  
+		<init-param>
+			<param-name>repositoryProviderMaster</param-name>
+			<param-value>org.eclipse.dirigible.repository.db.DBMasterRepositoryProvider</param-value>
+			<!- - <param-value>org.eclipse.dirigible.repository.db.GitMasterRepositoryProvider</param-value> - ->
+		</init-param>
+		-->
+		
+		<!-- Master Repository parameters - Git based
+		<init-param>
+			<param-name>masterRepositoryGitTarget</param-name>
+			<param-value>master_git_repository</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>masterRepositoryGitLocation</param-name>
+			<param-value>https://xxx</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>masterRepositoryGitUser</param-name>
+			<param-value>{git.user}</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>masterRepositoryGitPassword</param-name>
+			<param-value>{git.password}</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>masterRepositoryGitBranch</param-name>
+			<param-value>{git.branch}</param-value>
+		</init-param>
+		-->
+		 
+		 
 		
 		<!-- JNDI key for the Custom Database DataSource(s) 
 		<init-param>
